[gd_scene load_steps=27 format=3 uid="uid://d3bcljnndaea3"]

[ext_resource type="Texture2D" uid="uid://7m4cjbgop0kk" path="res://assets/characters/basic_charakter_spritesheet.png" id="1_cd7k5"]
[ext_resource type="Script" path="res://scenes/components/movement/movement_component.gd" id="1_wbjcb"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_x0f2a"]
[ext_resource type="Script" path="res://scenes/components/player_input/player_input_component.gd" id="2_2am66"]
[ext_resource type="Script" path="res://scenes/components/animation/idle.gd" id="4_rs127"]
[ext_resource type="Script" path="res://scenes/components/animation/animation_component.gd" id="4_ynx4h"]
[ext_resource type="Script" path="res://scenes/components/animation/moving.gd" id="5_ievbx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n7tfn"]
atlas = ExtResource("1_cd7k5")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nybt0"]
atlas = ExtResource("1_cd7k5")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqln7"]
atlas = ExtResource("1_cd7k5")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmu0m"]
atlas = ExtResource("1_cd7k5")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqsn0"]
atlas = ExtResource("1_cd7k5")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hccvr"]
atlas = ExtResource("1_cd7k5")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_om5rf"]
atlas = ExtResource("1_cd7k5")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5pub"]
atlas = ExtResource("1_cd7k5")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1hw2"]
atlas = ExtResource("1_cd7k5")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfh4i"]
atlas = ExtResource("1_cd7k5")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2tu0"]
atlas = ExtResource("1_cd7k5")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeh3m"]
atlas = ExtResource("1_cd7k5")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1pr7"]
atlas = ExtResource("1_cd7k5")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ac8p"]
atlas = ExtResource("1_cd7k5")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2yrb"]
atlas = ExtResource("1_cd7k5")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucnt3"]
atlas = ExtResource("1_cd7k5")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_771mw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7tfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nybt0")
}],
"loop": true,
"name": &"idle_down",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqln7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmu0m")
}],
"loop": true,
"name": &"idle_left",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqsn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hccvr")
}],
"loop": true,
"name": &"idle_right",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_om5rf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5pub")
}],
"loop": true,
"name": &"idle_up",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1hw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfh4i")
}],
"loop": true,
"name": &"walk_down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2tu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeh3m")
}],
"loop": true,
"name": &"walk_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1pr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ac8p")
}],
"loop": true,
"name": &"walk_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2yrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucnt3")
}],
"loop": true,
"name": &"walk_up",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j27id"]
radius = 3.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kx2it"]
radius = 6.0
height = 18.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_x0f2a")

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("1_wbjcb")
parent = NodePath("..")

[node name="AnimationComponent" type="Node" parent="." node_paths=PackedStringArray("parent_scene", "sprite")]
script = ExtResource("4_ynx4h")
parent_scene = NodePath("..")
sprite = NodePath("../AnimatedSprite2D")

[node name="Idle" type="Node" parent="AnimationComponent"]
script = ExtResource("4_rs127")

[node name="Moving" type="Node" parent="AnimationComponent"]
script = ExtResource("5_ievbx")

[node name="PlayerInputComponent" type="Node" parent="."]
script = ExtResource("2_2am66")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_771mw")
animation = &"walk_right"
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_j27id")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_kx2it")
